Add row buffer hit rate statistics
- Track ACTIVATE commands as row buffer misses in CommandQueue
- Add DEBUG_ROWBUFFER flag for detailed hit/miss logging
- Output overall and per-bank row buffer hit rate in printStats()

Usage: Set DEBUG_ROWBUFFER=true in system.ini for detailed output

--- a/DRAMSim2/system.ini
+++ b/DRAMSim2/system.ini
@@ -16,8 +16,9 @@ DEBUG_CMD_Q=true
 DEBUG_ADDR_MAP=true
 DEBUG_BUS=true
 DEBUG_BANKSTATE=true
-DEBUG_BANKS=false
+DEBUG_BANKS=true
 DEBUG_POWER=true
+DEBUG_ROWBUFFER=false			; Row buffer hit/miss debug output
 VIS_FILE_OUTPUT=true
 
 USE_LOW_POWER=true 					; go into low power mode when idle?
