Add SMART STT-MRAM support with priority-based scheduling
Changes:
- Add SMART STT-MRAM configuration (isSmartMRAM flag) with deferred sensing
- Implement priority-based scheduling policy (same cmd > diff bank > open page > age)
- Fix row buffer hit/miss counting to track actual hits in CommandQueue
- Add access latency histogram (from ACT issue to data return)
- Update timing parameters (tRRD, tCCD) to use short variants for better throughput

Key improvements:
- Row buffer statistics now correctly count hits when ACTIVATE is skipped
- New SCHEDULING_POLICY=priority_based option for command queue
- Separate access latency tracking (timeACTIssued) from total latency

--- a/DRAMSim2/ini/Baseline_DRAM.ini
+++ b/DRAMSim2/ini/Baseline_DRAM.ini
@@ -26,10 +26,10 @@ BL=8
 ; Core Timing
 tRAS=43
 tRCD=19
-tRRD=8
+tRRD=4				; tRRD_S=4, tRRD_L=8 (using _S for stream workload)
 tRC=62
 tRP=19
-tCCD=4
+tCCD=4				; tCCD_S=4, tCCD_L=7 (using _S)
 tRTP=10
 tWTR=10
 tWR=20
