--- a/DRAMSim2/ini/Conv-STT-MRAM.ini
+++ b/DRAMSim2/ini/Conv-STT-MRAM.ini
@@ -37,10 +37,10 @@ BL=8
 ; tRP is short (fast recovery)
 tRAS=30
 tRCD=29
-tRRD=6
+tRRD=3				; tRRD_S=3, tRRD_L=6 (using _S for stream workload)
 tRC=38
 tRP=8
-tCCD=8
+tCCD=4				; tCCD_S=4, tCCD_L=8 (using _S)
 tRTP=1
 tWTR=10
 tWR=31
