--- a/DRAMSim2/ini/SMART.ini
+++ b/DRAMSim2/ini/SMART.ini
@@ -20,6 +20,7 @@ NUM_BANKS=16
 NUM_ROWS=65536
 NUM_COLS=1024
 DEVICE_WIDTH=8
+isSmartMRAM=true
 
 ; ============================================
 ; Timing Parameters (in cycles, tCK=0.75ns)
@@ -42,10 +43,10 @@ BL=8
 ; tFAW and tRRD are minimal (ACT power is very low)
 tRAS=15
 tRCD=14
-tRRD=1
+tRRD=1				; tRRD_S=1, tRRD_L=4 (using _S for stream workload)
 tRC=23
 tRP=8
-tCCD=4
+tCCD=4				; tCCD_S=4, tCCD_L=8 (using _S)
 tRTP=15
 tWTR=10
 tWR=31
