Update .gitignore to exclude benchmark traces and experiment logs
Add patterns to ignore:
- benchmark/traces/trc (large trace files)
- experiment/*/archive/ (archived experiment data)
- experiment/*/trace_log/ (experiment trace logs)

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@
 
 # DRAMSim2 results
 DRAMSim2/results/
+
+# Benchmark traces
+benchmark/traces/trc
+
+# Experiments results
+experiment/*/archive/
+experiment/*/trace_log/
