Add quad-core configuration and fix GCC version parsing
- Add quad_core machine config with 4 OOO cores and shared 4MB L2
- Fix GCC version regex for compatibility with GCC 13+
- Update smart.simconfig to use quad_core machine
- Update .gitignore for MARSSx86 build artifacts and results
- Fix DRAMSim2 system.ini settings

--- a/marss.dramsim/config/default.conf
+++ b/marss.dramsim/config/default.conf
@@ -238,3 +238,44 @@ machine:
         connections:
           - L2_*: LOWER
             MEM_0: UPPER
+
+  quad_core:
+    description: Quad Core configuration with shared 4MB L2 (for Rethinking paper)
+    min_contexts: 4
+    cores:
+      - type: ooo
+        name_prefix: ooo_
+    caches:
+      - type: l1_128K_mesi
+        name_prefix: L1_I_
+        insts: $NUMCORES
+        option:
+          private: true
+          last_private: true
+      - type: l1_128K_mesi
+        name_prefix: L1_D_
+        insts: $NUMCORES
+        option:
+          private: true
+          last_private: true
+      - type: l2_4M
+        name_prefix: L2_
+        insts: 1
+    memory:
+      - type: dram_cont
+        name_prefix: MEM_
+        insts: 1
+    interconnects:
+      - type: p2p
+        connections:
+          - core_$: I
+            L1_I_$: UPPER
+          - core_$: D
+            L1_D_$: UPPER
+          - L2_0: LOWER
+            MEM_0: UPPER
+      - type: split_bus
+        connections:
+          - L1_I_*: LOWER
+            L1_D_*: LOWER
+            L2_0: UPPER
