--- a/marss.dramsim/config/l2_cache.conf
+++ b/marss.dramsim/config/l2_cache.conf
@@ -32,3 +32,12 @@ cache:
     base: l2_2M_mesi
     params:
       SIZE: 1M
+  l2_4M:
+    base: wb_cache
+    params:
+      SIZE: 4M
+      LINE_SIZE: 64
+      ASSOC: 16
+      LATENCY: 5
+      READ_PORTS: 2
+      WRITE_PORTS: 2
