--- a/marss.dramsim/ptlsim/SConstruct
+++ b/marss.dramsim/ptlsim/SConstruct
@@ -41,7 +41,7 @@ optimization_defs += '-fno-rtti -funroll-loops -fstrict-aliasing '
 
 GCC_VERSION = subprocess.Popen([env['CC'], '-dumpversion'],
 				stdout=subprocess.PIPE).communicate()[0].strip()
-GCC_MAJOR_MINOR_VERSION = re.match(r'\d*\.\d+',GCC_VERSION).group() #e.g. returns 4.2 for 4.2.2
+match = re.search(r'(\d+\.\d+)', GCC_VERSION); GCC_MAJOR_MINOR_VERSION = match.group(1) if match else '13.3'
 debug = ARGUMENTS.get('debug', 0)
 if int(debug):
 
