--- a/DRAMSim2/ini/SMART.ini
+++ b/DRAMSim2/ini/SMART.ini
@@ -43,10 +43,10 @@ BL=8
 ; tFAW and tRRD are minimal (ACT power is very low)
 tRAS=15
 tRCD=14
-tRRD=1				; tRRD_S=1, tRRD_L=4 (using _S for stream workload)
+tRRD=1    ; tRRD_S=1, tRRD_L=4 (using _S for stream workload)
 tRC=23
 tRP=8
-tCCD=4				; tCCD_S=4, tCCD_L=8 (using _S)
+tCCD=4    ; tCCD_S=4, tCCD_L=8 (using _S)
 tRTP=15
 tWTR=10
 tWR=31
@@ -64,13 +64,13 @@ tCMD=1
 ; IDD4R is higher (sensing happens at READ)
 IDD0=38
 IDD1=115
-IDD2P=10
+IDD2P=27
 IDD2Q=50
 IDD2N=37
 IDD3Pf=45
 IDD3Ps=45
 IDD3N=37
-IDD4W=152
+IDD4W=151
 IDD4R=150
 IDD5=0
 IDD6=9
@@ -81,3 +81,5 @@ IDD7=400
 ; Voltage (V)
 ; ============================================
 Vdd=1.2
+
+isSmartMRAM=true  ;smart mram specific
