--- a/DRAMSim2/system_sch6.ini
+++ b/DRAMSim2/system_sch6.ini
@@ -11,14 +11,14 @@ SCHEDULING_POLICY=rank_then_bank_round_robin  ; bank_then_rank_round_robin or ra
 QUEUING_STRUCTURE=per_rank			;per_rank or per_rank_per_bank
 
 ;for true/false, please use all lowercase
-DEBUG_TRANS_Q=true
-DEBUG_CMD_Q=true
-DEBUG_ADDR_MAP=true
-DEBUG_BUS=true
-DEBUG_BANKSTATE=true
-DEBUG_BANKS=true
-DEBUG_POWER=true
-DEBUG_ROWBUFFER=true
+DEBUG_TRANS_Q=false
+DEBUG_CMD_Q=false
+DEBUG_ADDR_MAP=false
+DEBUG_BUS=false
+DEBUG_BANKSTATE=false
+DEBUG_BANKS=false
+DEBUG_POWER=false
+DEBUG_ROWBUFFER=false
 VIS_FILE_OUTPUT=true
 
 USE_LOW_POWER=true 					; go into low power mode when idle?
